<resources>
    <string name="app_name">GithubService</string>
    <string name="results_failed_to_load">Results failed to load</string>
    <string name="try_again">Try Again</string>
    <string name="no_results_found">No results found</string>
    <string name="avatar">avatar image</string>
    <string name="bestmatch">bestmatch</string>
    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="updated">updated</string>
    <string name="repository">Repository</string>
    <string name="user">User</string>
</resources>