<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="app.githubservice.ui.search.GithubSearch" />

        <variable
            name="viewModel"
            type="app.githubservice.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">


        <RadioGroup
            android:id="@+id/sort_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radio_bestmatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.currentSort.equals(GithubSearch.BEST_MATCH)}"
                android:onClick='@{()->viewModel.sortBy(GithubSearch.BEST_MATCH)}'
                android:text="@string/bestmatch" />

            <RadioButton
                android:id="@+id/radio_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.currentSort.equals(GithubSearch.STARS)}"
                android:onClick='@{()->viewModel.sortBy(GithubSearch.STARS)}'
                android:text="@string/stars" />

            <RadioButton
                android:id="@+id/radio_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.currentSort.equals(GithubSearch.FORKS)}"
                android:onClick='@{()->viewModel.sortBy(GithubSearch.FORKS)}'
                android:text="@string/forks" />

            <RadioButton
                android:id="@+id/radio_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.currentSort.equals(GithubSearch.UPDATED)}"
                android:onClick='@{()->viewModel.sortBy(GithubSearch.UPDATED)}'
                android:text="@string/updated" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/search_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_linear_layout"
            tools:listitem="@layout/item_github_search" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_failed_to_load"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results_found"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>


        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler_view"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>