<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".ui.details.DetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="100dp"
                android:layout_marginTop="16dp"
                android:layout_height="100dp"
                android:contentDescription="@string/avatar"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/text_name"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/image_view"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="React" />

            <TextView
                android:id="@+id/text_author"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_name"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/image_view"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="by facebook" />

            <TextView
                android:id="@+id/text_view_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_author"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/image_view"
                android:drawablePadding="6dp"
                android:padding="4dp"
                app:drawableStartCompat="@drawable/ic_baseline_date_range_20"
                tools:text="22 Jan 2015" />

            <TextView
                android:id="@+id/text_view_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_created"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/image_view"
                android:drawablePadding="6dp"
                android:padding="4dp"
                app:drawableStartCompat="@drawable/ic_baseline_update_20"
                tools:text="22 Jan 2020" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_repository"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:drawablePadding="12dp"
                android:text="@string/repository"
                app:icon="@drawable/ic_baseline_open_in_new_20" />

            <Button
                android:id="@+id/button_user"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/user"
                app:icon="@drawable/ic_baseline_open_in_new_20" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_description"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="Google Chrome, Firefox, and Thunderbird extension that lets you write email in Markdown and render it before sending." />


        <TextView
            android:id="@+id/text_view_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="6dp"
            android:padding="4dp"
            app:drawableStartCompat="@drawable/ic_baseline_code_20"
            tools:text="Javascript" />
    </LinearLayout>
</layout>